# picoweather

./: .gitignore  CMakeLists.txt  upload.sh
src/: crc.c  main.c  pw_cc.h  pw_cfg.h  pw_log.c  pw_log.h
src/drivers/: bh1750.c  bh1750.h  bme280.h  s12sd.c  s12sd.h  sgp30.h
